spec/data/mockDefs/invalid/authMethodNotSpecified/mockDefAuthMethodNotSpecified.js
module.exports = function () {
  return {
    respondTo: 'GET',
    endpoint: '/api/hello/:name',
    handledBy: () => {},
  };
};
